# hackathon-gemini

./: .gitignore  DISCOVERIES.md  README.md  project_flow_diagrams.html  test_gemini_access.py
app/: .gitignore  package-lock.json  package.json
app/src/: App.tsx  index.css
app/src/api/: client.ts
app/src/components/: AdminRequest.tsx  AgentsPanel.tsx  Chatbox.tsx  DocumentsViewer.tsx  IndividuCard.tsx  SearchPanel.tsx  StartScreen.tsx  TreeView.tsx
app/src/hooks/: useArbre.ts  useSSE.ts
app/src/mocks/: data.ts
app/src/types/: index.ts
backend/: .env.example  config.py  main.py  pyproject.toml  smoke_test_prudence.py
backend/agents/: admin_agent.py  ocr_agent.py  recursive_agent.py
backend/models/: arbre.py  events.py  individu.py
backend/services/: arkotheque.py  chromadb_service.py  gemini.py  geocoding.py
backend/tests/: test_admin_agent.py  test_arkotheque.py  test_chromadb_service.py  test_geocoding.py  test_main.py  test_models.py  test_ocr_agent.py  test_recursive_agent.py
docs/: DEMO_SCRIPT.md
docs/arkotheque/: api-new.md  api-old.md  departments.md  overview.md
docs/project/: architecture.md  competitive.md  genealogy-apis.md  models.md
docs/tasks/: backend.md  contracts.md  frontend.md  roadmap.md
theme-previews/: archive-futuriste.html  art-deco.html  blueprint.html  brutalist.html  editorial.html
