[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "google-genai>=1.67.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-levenshtein>=0.27.3",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
